# simulation

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  config.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
docs/: contributing.md
docs/source/: agents.rst  conf.py  demandfunctions.rst  modules.rst
docs/tutorial/: getting_started_tutorial.md
src/: agent.py  demandFunction.py  demand_function.py  demandfunction.py  environment.py  fixed_agent.py  graphing.py  main.py  mava_trial.py  pettingzoo_utils.py  plotting.py  q_learning.py  random_agent.py  rllib.py  rllib_test.py  run_maddpg.py  test.py  zero_agent.py
src/agents/: fixed_agent.py  q_agent.py  random_agent.py  sarsa_agent.py  zero_agent.py
src/ai_market_contest/: agent.py  agent.templ  cli.py  demand_function.py  demand_function.templ  environment.py  example_main.py  graphing.py  initial_pickler.py  initial_pickler.templ  main.py  ranking.py  test_agent.py
src/ai_market_contest/agents/: fixed_agent.py  fixed_agent_fifty.py  fixed_agent_random.py  q_agent.py  random_agent.py  sarsa_agent.py  trainer_agent_adapter.py
src/ai_market_contest/cli/: add_agent_subcommand.py  addagentsubcommand.py  adddemandfunctionsubcommand.py  aic  aic.py  cli.py  cli_config.py  file_structure_init.py  initagentsubcommand.py  initialiseagentsubcommand.py  initsubcommand.py  resetsubcommand.py  runsubcommand.py  trainsubcommand.py  utils.py
src/ai_market_contest/demandfunctions/: fixed_demand_function.py  fixed_lowest_takes_all_demand_function.py  gaussian_demand_function.py  lowest_takes_all_demand_function.py  noisy_fixed_demand_function.py
src/ai_market_contest/evaluation/: agent_evaluator.py  graphing.py  one_hot_encoder.py  ranking.py
src/ai_market_contest/training/: agent_evaluator.py  agent_name_maker.py  agent_trainer.py  custom_agent_trainer.py  policy_config_maker.py  policy_selector.py  rllib_agent_trainer.py  sequential_agent_name_maker.py  train.py  training_config_maker.py
src/ai_market_contest/typing/: types.py
src/demandfunctions/: demandFunction.py  fixedDemandFunction.py  fixed_demand_function.py  gaussian_demand_function.py  noisy_fixed_demand_function.py
src/utils/: plotting.py
tests/: placeholdertest.py  pyproject.toml  test_basic_agents.py  test_environment.py
tests/ai_market_contest/: conftest.py  test_display_agents.py  test_environment.py
tests/ai_market_contest/agents/: test_agent_interface.py  test_basic_agents.py  test_ml_agents.py
tests/ai_market_contest/cli/: cli_test_utils.py  conftest.py  test_add-agent_subcommand.py  test_adddemandfunctionsubcommand.py  test_agent_locator.py  test_agent_manipulation_utils.py  test_demand_function_locator.py  test_evaluation_config.py  test_execute_training_routine.py  test_get_agent.py  test_init_subcommand.py  test_initsubcommand.py  test_reset_subcommand.py  test_training_config.py
tests/ai_market_contest/demandfunctions/: test_fixed_demand_function.py  test_gaussian_demand_function.py  test_lowest_takes_all_demand_function.py  test_noisy_demand_function.py  workspace.code-workspace
tests/ai_market_contest/evaluation/: test_evaluator.py
tests/ai_market_contest/training/: test_agent_name_makers.py  test_policy_config_maker.py  test_policy_selector.py
tests/demandfunctions/: test_fixed_demand_function.py  test_gaussian_demand_function.py
typings/gym/: __init__.pyi  error.pyi  version.pyi
typings/gym/envs/: __init__.pyi
typings/gym/spaces/: __init__.pyi
typings/gym/utils/: __init__.pyi  atomic_write.pyi  closer.pyi  colorize.pyi  ezpickle.pyi  json_utils.pyi
typings/pettingzoo/: __init__.pyi
(+104 files in other folders)
