[tool.poetry]
name = "ai_market_contest"
version = "0.1.0"
description = "AI contests for deep reinforcement learning bots in online markets"
authors = ["Matteo Bongiovanni <mgb58@hotmail.co.uk>",
           "Ibraheem Wazir <ibraheem.wazir.uk@gmail.com>",
           "Jack Benham <jack.benham34@gmail.com>",
           "Pranav Maganti <pranav.magnati@gmail.com>",
           "Michael Clasby <michaelclasby@hotmail.com>",
           "Yash Yeola <yeolayash101@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Sphinx = "^4.2.0"
numpy = "^1.21.3"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
tqdm = "^4.62.3"
PyQt5 = "^5.15.6"
ray = {extras = ["rllib"], version = "^1.8.0"}
tensorflow = "^2.7.0"
tensorboard = "^2.7.0"
GPUtil = "^1.4.0"
typer = {extras = ["all"], version = "^0.4.0"}
questionary = "^1.10.0"


[tool.poetry.dev-dependencies]
black = "^21.9b0"
codespell = "^2.1.0"
flake8 = "^4.0.1"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pyupgrade = "^2.29.0"
pre-commit = "^2.15.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
