[tool.poetry]
name = "ai_market_contest"
version = "0.1.0"
description = "AI contests for deep reinforcement learning bots in online markets"
license = "MIT"
authors = ["Matteo Bongiovanni <mgb58@hotmail.co.uk>",
           "Ibraheem Wazir <ibraheem.wazir.uk@gmail.com>",
           "Jack Benham <jack.benham34@gmail.com>",
           "Pranav Maganti <pranav.magnati@gmail.com>",
           "Michael Clasby <michaelclasby@hotmail.com>",
           "Yash Yeola <yeolayash101@gmail.com>"]
readme = "README.md"
repository = "https://github.com/AIMarketContest/simulation"
documentation = "https://github.com/AIMarketContest/simulation/tree/main/docs"
keywords = ["ai", "market", "contest", "simulation", "rl"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Sphinx = "^4.2.0"
numpy = "^1.21.3"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
tqdm = "^4.62.3"
ray = "1.13.0"
tensorflow = "^2.7.0"
tensorboard = "^2.7.0"
typer = {extras = ["all"], version = "^0.4.0"}
questionary = "^1.10.0"
dill = "^0.3.4"
torch = "^1.10.1"
tensorflow-probability = "^0.15.0"
tabulate = "^0.9.0"
scikit-image = "^0.22.0"
gym = "0.22.0"
lz4 = "4.3.2"
silence-tensorflow = "1.2.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
codespell = "^2.1.0"
flake8 = "^4.0.1"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pyupgrade = "^2.29.0"
pre-commit = "^2.15.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.scripts]
aic = "ai_market_contest.cli.aic:run"
